feat(core, windows): Change the windows plugin compiling way (#11594)

--- a/packages/firebase_auth/firebase_auth/windows/CMakeLists.txt
+++ b/packages/firebase_auth/firebase_auth/windows/CMakeLists.txt
@@ -22,7 +22,7 @@ list(APPEND PLUGIN_SOURCES
 
 # Define the plugin library target. Its name must not be changed (see comment
 # on PLUGIN_NAME above).
-add_library(${PLUGIN_NAME} SHARED
+add_library(${PLUGIN_NAME} STATIC
   "include/firebase_auth/firebase_auth_plugin_c_api.h"
   "firebase_auth_plugin_c_api.cpp"
   ${PLUGIN_SOURCES}
@@ -38,14 +38,13 @@ apply_standard_settings(${PLUGIN_NAME})
 # exported should be explicitly exported with the FLUTTER_PLUGIN_EXPORT macro.
 set_target_properties(${PLUGIN_NAME} PROPERTIES
   CXX_VISIBILITY_PRESET hidden)
-target_compile_definitions(${PLUGIN_NAME} PRIVATE FLUTTER_PLUGIN_IMPL)
+target_compile_definitions(${PLUGIN_NAME} PUBLIC FLUTTER_PLUGIN_IMPL)
 
 # Source include directories and library dependencies. Add any plugin-specific
 # dependencies here.
 set(MSVC_RUNTIME_MODE MD)
-set(firebase_libs firebase_core_plugin firebase_auth firebase_app)
-set(ADDITIONAL_LIBS advapi32 ws2_32 crypt32)
-target_link_libraries(${PLUGIN_NAME} PRIVATE "${firebase_libs}" "${ADDITIONAL_LIBS}")
+set(firebase_libs firebase_core_plugin firebase_auth)
+target_link_libraries(${PLUGIN_NAME} PRIVATE "${firebase_libs}")
 
 target_include_directories(${PLUGIN_NAME} INTERFACE
   "${CMAKE_CURRENT_SOURCE_DIR}/include")
