--- a/packages/cloud_firestore_odm/cloud_firestore_odm_generator/pubspec.yaml
+++ b/packages/cloud_firestore_odm/cloud_firestore_odm_generator/pubspec.yaml
@@ -20,6 +20,7 @@ dependencies:
   meta: ^1.8.0
   recase: ^4.0.0
   source_gen: ^1.3.2
+  source_helper: ^1.3.4
 
 dev_dependencies:
   build_runner: ^2.4.2
