--- a/packages/firebase_app_check/firebase_app_check/android/build.gradle
+++ b/packages/firebase_app_check/firebase_app_check/android/build.gradle
@@ -55,10 +55,10 @@ android {
   dependencies {
     api firebaseCoreProject
     implementation platform("com.google.firebase:firebase-bom:${getRootProjectExtOrCoreProperty("FirebaseSDKVersion", firebaseCoreProject)}")
-    // TODO: Since App Check is a beta SDK it's not available in the Firebase Android BoM so we need to specify an exact version here.
-    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.1.0'
-    implementation 'com.google.firebase:firebase-appcheck-debug:16.1.0'
+    implementation 'com.google.firebase:firebase-appcheck-debug'
     implementation 'com.google.firebase:firebase-appcheck-playintegrity'
+    // SafetyNet is deprecated and not part of Firebase BOM
+    implementation 'com.google.firebase:firebase-appcheck-safetynet:16.1.2'
     implementation 'androidx.annotation:annotation:1.5.0'
   }
 }
